--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>The Tea Cozy</title>
-  <link rel="stylesheet" href="style.css" type="text/css" />
+    <title>The Tea Cozy</title>
+    <link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
-  <body>
-  </body>
+
+<body>
+    <header>
+        <div class="flex_container">
+            <div class="flex_item1">
+                <img class="logo" src="assets/img-tea-cozy-logo.png">
+            </div>
+            <div class="flex_item2">
+                <nav class="navbar">
+                    <ul>
+                        <li><a href="#">Mission</a></li>
+                        <li><a href="#">Featured Tea</a></li>
+                        <li><a href="#">Locations</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <section>
+        <!-- <img class="misson_image" src="assets/img-mission-background.jpg"> -->
+    </section>
+</body>
+
 </html>
