--- a/index.html
+++ b/index.html
@@ -24,7 +24,25 @@
         </div>
     </header>
     <section>
-        <!-- <img class="misson_image" src="assets/img-mission-background.jpg"> -->
+        <div class="mission">
+            <h2>Our Mission</h2>
+            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+    </section>
+    <section>
+        <div class="tea_of_month">
+            <h2>Tea of the Month</h2>
+            <h4>What's Steeping at The Tea Cozy?</h4>
+            <div class="tea_flex">
+                <img src="assets/img-berryblitz.jpg">
+                <h4>Fall Berry Blitz Tea</h4>
+                <img src="assets/img-spiced-rum.jpg">
+                <h4>Spiced Rum Tea</h4>
+                <img src="assets/img-donut.jpg">
+                <img src="assets/img-donut.jpg">
+                <img src="assets/img-bedford-bizarre.jpg">
+            </div>
+        </div>
     </section>
 </body>
 
